8311557: [JVMCI] deadlock with JVMTI thread suspension